# CPP-QT-app

./: README.md
QTApp/: CMakeLists.txt  CosReadOnlyGUI.h  Error.h  GUI.cpp  GUI.h  afisare.csv  afisare.html  main.cpp  produse.txt  repo.cpp  service.cpp  service.h  tableModel.h  test.csv  test.html  test_vector.cpp  undo.h  vector.cpp  vector.h
lab10_11_2/: CMakeLists.txt  CosCRUDGUI.h  CosProduse.cpp  CosProduse.h  LabRepo.cpp  main.cpp  observer.h  produs.cpp  produs.h  produse.txt  repo.cpp  repo.h  service.cpp  tabelModelGUI.cpp  tabelModelGUI.h  test.csv  test.txt  ui.cpp  ui.h  validare.cpp  validare.h
